<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movies_item_view"
    android:layout_width="210dp"
    android:layout_height="340dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/circle_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".645" />

        <ImageView
            android:id="@+id/movie_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_movie_thumb"
            app:layout_constraintBottom_toTopOf="@+id/middle_guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rating_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="25dp"
            app:cardElevation="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circle_guideline_horizontal"
            app:strokeColor="#4CAF50"
            app:strokeWidth="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_ratings_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="@string/dummy_ratings"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:maxLines="1"
            android:text="@string/movie_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middle_guideline_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/release_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/dummy_date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
